--- a/src/component/MyAccountOrderViewItem/MyAccountOrderViewItem.style.scss
+++ b/src/component/MyAccountOrderViewItem/MyAccountOrderViewItem.style.scss
@@ -86,11 +86,11 @@
       }
       .EddStandardDeliveryText {
         font-weight: 400;
-        font-size: 14px;
+        font-size: 12px;
       }
       .EddStandardDeliveryTextBold {
         font-weight: 600;
-        font-size: 14px;
+        font-size: 12px;
       }
     }
   }
